--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Setup
 title:               Excalibur-SLE
 tagline:             'Exascale HPC for System Level Engineering'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 https://chrisrichardson.github.io
-baseurl:             lanyon
+description:         'An Excalibur Design and Development Working Group'
+url:                 https://chrisrichardson.github.io/lanyon
+baseurl:             ''
 paginate:            5
 permalink:           pretty
 
@@ -18,5 +18,5 @@ plugins:
   - jekyll-paginate
 
 # Custom vars
-version:             1.1.0
+version:             1.0.0
 # google_analytics_id:
