--- a/_config.yml
+++ b/_config.yml
@@ -18,5 +18,7 @@ plugins:
   - jekyll-paginate
 
 # Custom vars
-version:             1.0.0
+version:             1.2.0
 # google_analytics_id:
+github:
+  repo: https://github.com/excalibur-sle
